--- a/web/package.json
+++ b/web/package.json
@@ -18,9 +18,15 @@
         "@tailwindcss/forms": "^0.5.1",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.22.0",
+        "@typescript-eslint/parser": "^5.22.0",
         "@vitejs/plugin-react": "^1.3.0",
         "autoprefixer": "^10.4.7",
+        "eslint": "^8.14.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-react": "^7.29.4",
         "postcss": "^8.4.13",
+        "prettier": "^2.6.2",
         "tailwind-scrollbar": "^1.3.1",
         "tailwindcss": "^3.0.24",
         "typescript": "^4.6.3",
